Update CV and image

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # main text of home
 name: Chenzhi Zhu
 
-picture: assets/images/p1.jpg
+picture: assets/images/p1_20.jpg
 
 cv: assets/pdf/ChenzhiZhu_CV.pdf
 
